# photoshort

./: .gitignore  Cargo.toml  README.md  log.txt
.github/workflows/: rust.yml
src/: config.rs  configurator.rs  discovery.rs  main.rs  photo.rs  pserror.rs  tests.rs  zipfiles.rs
