[package]
name = "photosort"
version = "0.1.0"
authors = ["Roman Kirillov <sigizmund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
kamadak-exif = "0.5.3"
chrono = "0.4.19"
tempfile = "3"
file_diff = "1.0.0"
futures = "0.3.13"
indicatif = "0.15.0"
log = "0.4"
simple-logging = "2.0.2"
ffmpeg-next = "4.3.8"
clap = "2.33.0"
zip = "0.5"
derive_builder = "0.9.0"